cocoa: return extension install dialog's white background

This dialog uses ConstrainedWindowCustomWindow, but it needs a white background
so that the contained text can be properly antialiased.

Bug: 747782
Change-Id: I973b00096feaaea44ba72e699838f37ac8a3e518
Reviewed-on: https://chromium-review.googlesource.com/590491
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490756}
Former-commit-id: 567c089397ef001b5a2b645ddc31bfbc0c6e2e3a